----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-04-16 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/french update

2004-04-16 Michal Cihar  <michal@cihar.com>
    * libraries/common.lib.php, libraries/export/sql.php: ANSI compatible
      exports (RFE #859815).
    * images/button_export.png: At least some export icon.
    * libraries/display_tbl.lib.php: Fix image sizes.
    * calendar.php, tbl_change.php, css/phpmyadmin.css.php,
      images/button_calendar.png, libraries/tbl_change.js, lang/*: Pop-up
      calendar for date fields (RFE #880647).

2004-04-15 Marc Delisle  <lem9@users.sourceforge.net>
    * ldi_table.php: allow longer field terminator (was 2 now 4);
      for example, to load a file where each line represents one field
      and the end of line is \r\n

2004-04-15 Michal Cihar  <michal@cihar.com>
    * tbl_properties_export.php, tbl_row_delete.php,
      libraries/display_tbl.lib.php: Support for exporting selected rows (RFE
      #927554).
    * libraries/auth/cookie.auth.lib.php: Fix possible undefined variable use.
    * libraries/display_tbl.lib.php: Convert charset for column fields (thanks
      to Marc for noticing this).

2004-04-15 Olivier Mueller <om@omnis.ch>
    * left.php: RFE #859208, Logout button in left frame

2004-04-14 Michal Cihar  <michal@cihar.com>
    * lang/czech: Updated.
    * tbl_select.php: Fixed undefined variable warning.
    * libraries/common.lib.php, libraries/display_tbl.lib.php,
      libraries/export/sql.php: Really support export of UPDATE queries (bug
      #914237), condition generation used from previous implementation in
      display_tbl.lib.php and moved to common.lib.php.
    * config.inc.php, export.php, lang/*, libraries/common.lib.php,
      libraries/config_import.lib.php, libraries/display_export.lib.php,
      libraries/export/*: Support for enclosing SQL export in transaction (RFE
      #930827).